--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div class="skill-row">
         <div class="skill-img3">
-          <img class="fit-scuba" src="images/Scuba.png" alt="scuba pic">
+          <img class="fit-scuba" src="images/scuba.png" alt="scuba pic">
           <img class="fit-trucking" src="images/trucking.png" alt="trucking pic">
           <img class="fit-pilot" src="images/pilot.png" alt="pilot pic">
         </div>
